Remove references to emptyMap